	triggers configuration setting, which determines at what
	times the hourly trigger will invoke a particular trigger.

	* lib/Majordomo.pm (trigger):  Evaluate the triggers configuration
	setting during the hourly trigger.

	* lib/Mj/Config.pm (parse_triggers):  New routine.  Each line
	of the triggers setting contains a trigger name and set of
	times at which the trigger should be invoked.
	(_str_to_clock)  Parse "yearly" "quarterly" "monthly" "daily"
	and a new abbreviated format (e.g., 7m3d(8) for July 3, 8 am).

	* lib/Mj/Digest.pm (in_clock):  Handle hours relative to the 
	start of a year, or relative to the start of a particular month.

	* lib/Mj/Resend.pm (_r_strip_body):  New routine.  Discard
	attachments as required by the attachment_rules setting.

2000-08-24  Darren Stalder  <torin@daft.com>

	* README: After the setup questions are asked, mention that you
	can prepare and use a response file.

	* setup/query_util.pl (prompt): Allow prompt to read from STDIN if
	there is any data waiting there.  This allows the installer to
	prepare a response file for the questions; very useful for
	packaging mj2.

2000-08-24  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  Include digests when the details about
	an individual list are shown.

	* lib/Majordomo.pm: (lists) Include digest names and
	descriptions in the data.
	(_report) Allow more complicated time spans, e.g.,
	2w3d4h for the last 2 weeks, 3 days, and 4 hours.
	(Thanks to Dave Wolfe for the suggestion.)
	(trigger) Add new trigger options for finer control.
	The following abbreviations are available:
	b (bounce) or v (vacation) ... expire bounce and vacation data.
	c (checksum) ... expire duplicate checksum/id data.
	da (daily) ... all of the other tasks, except digests.
	di (digest) or h (hourly) ... issue digests.
	l (log) ... expire old log entries.
	s (session) ... expire old session data.
	t (token) ... expire old tokens and temporary passwords.
